par tranche d'age et sexe

--- a/R_Laamimat_exo3.html
+++ b/R_Laamimat_exo3.html
@@ -1,18 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Covid</title>
-</head>
-<body>
-    
-    <h1>Test API Vaccination</h1> 
-    <p id="result"></p>
-  
-    
- <script src="/R_Laamimat_exo3.js"></script>
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Covid</title>
+    </head>
+
+    <body>
+
+        <h1>Test API Vaccination</h1>
+        <p id="result"></p>
+
+        <iframe
+            src="https://public.opendatasoft.com/explore/embed/dataset/covid-19-france-vaccinations-age-sexe-dep/custom/?disjunctive.variable_label&lang=FR&rows=100&dataChart=eyJxdWVyaWVzIjpbeyJjaGFydHMiOlt7InR5cGUiOiJsaW5lIiwiZnVuYyI6IkFWRyIsInlBeGlzIjoibl9kb3NlMSIsInNjaWV&static=false&datasetcard=false"
+            width="400" height="300" frameborder="0"></iframe>
+        <script src="/R_Laamimat_exo3.js"></script>
+    </body>
+
 </html>
